--- a/src/Layout.css
+++ b/src/Layout.css
@@ -40,7 +40,7 @@
 }
 
 .fa {
-    font-size: 23px;
+    font-size: 19px;
 }
 
 .title {
